@@ -32,6 +32,7 @@ Wagtail 4.1 is designated a Long Term Support (LTS) release. Long Term Support r
  * Update expanding formset add buttons to use `button` not link for behaviour and remove support for disabled as a class (LB (Ben) Johnston)
  * Add robust unit testing for authentication scenarios across the user management admin pages (Mehrdad Moradizadeh)
  * Avoid assuming an integer PK named 'id' on multiple upload views (Matt Westcott)
+ * Add a toggle to collapse/expand all page panels at once (Helen Chapman)
 
 ### Bug fixes
 
